tests/typing/faulty_assignment_c.sy
start :: fn do
    a: {int} = [2, 2]
end
// error: $Mismatch { .. }
